sidebar overlapping fixes, unenven card width fix, article date/submitted alignment, sidebar styles

--- a/docroot/themes/ci_xy/scss/component/_hero.scss
+++ b/docroot/themes/ci_xy/scss/component/_hero.scss
@@ -1,20 +1,20 @@
-.main-container {
-  .paragraph--type--full-column-hero,
-  .paragraph--type--row-two-column-hero,
-  .paragraph--type--row-three-column-hero,
-  .paragraph--type--bp-columns-two-uneven,
-  .paragraph--type--bp-columns-three-uneven,
-  .paragraph--type--bp-columns {
-    .paragraph__column {
-      &--container-wrapper {
-        .container {
-          padding-left:0;
-          padding-right:0;
-        }
-      }
-    }
-  }
-}
+//.main-container {
+//  .paragraph--type--full-column-hero,
+//  .paragraph--type--row-two-column-hero,
+//  .paragraph--type--row-three-column-hero,
+//  .paragraph--type--bp-columns-two-uneven,
+//  .paragraph--type--bp-columns-three-uneven,
+//  .paragraph--type--bp-columns {
+//    .paragraph__column {
+//      &--container-wrapper {
+//        .container {
+//          padding-left:0;
+//          padding-right:0;
+//        }
+//      }
+//    }
+//  }
+//}
 .paragraph--type--full-column-hero,
 .paragraph--type--row-two-column-hero,
 .paragraph--type--row-three-column-hero,
@@ -39,72 +39,72 @@
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (min-width: 768px) {
-    .paragraph--type--bp-columns__6col {
-      float: left;
-      width: 16.66666667%;
-    }
-  }
+  //@media (min-width: 768px) {
+  //  .paragraph--type--bp-columns__6col {
+  //    float: left;
+  //    width: 16.66666667%;
+  //  }
+  //}
   .paragraph--type--bp-columns__5col {
     position: relative;
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (min-width: 768px) {
-    .paragraph--type--bp-columns__5col {
-      float: left;
-      width: 20%;
-    }
-  }
+  //@media (min-width: 768px) {
+  //  .paragraph--type--bp-columns__5col {
+  //    float: left;
+  //    width: 20%;
+  //  }
+  //}
   .paragraph--type--bp-columns__4col {
     position: relative;
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (min-width: 768px) {
-    .paragraph--type--bp-columns__4col {
-      float: left;
-      width: 25%;
-    }
-  }
+  //@media (min-width: 768px) {
+  //  .paragraph--type--bp-columns__4col {
+  //    float: left;
+  //    width: 25%;
+  //  }
+  //}
   .paragraph--type--bp-columns__3col {
     position: relative;
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (min-width: 768px) {
-    .paragraph--type--bp-columns__3col {
-      float: left;
-      width: 33.33333333%;
-    }
-  }
+  //@media (min-width: 768px) {
+  //  .paragraph--type--bp-columns__3col {
+  //    float: left;
+  //    width: 33.33333333%;
+  //  }
+  //}
   .paragraph--type--bp-columns__2col {
     position: relative;
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (min-width: 768px) {
-    .paragraph--type--bp-columns__2col {
-      float: left;
-      width: 50%;
-    }
-  }
+  //@media (min-width: 768px) {
+  //  .paragraph--type--bp-columns__2col {
+  //    float: left;
+  //    width: 50%;
+  //  }
+  //}
   .paragraph--type--bp-columns__1col {
     position: relative;
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (min-width: 768px) {
-    .paragraph--type--bp-columns__1col {
-      float: left;
-      width: 100%;
-    }
-  }
+  //@media (min-width: 768px) {
+  //  .paragraph--type--bp-columns__1col {
+  //    float: left;
+  //    width: 100%;
+  //  }
+  //}
   .paragraph__card {
     float: left;
     width: 100%;
